Fixes compilation error on Java SE 8.